--- a/resources/assets/angular/src/app/app.component.html
+++ b/resources/assets/angular/src/app/app.component.html
@@ -7,6 +7,6 @@
 </div>
 <h2>Here are some links to help you start: </h2>
 <div>
-  <app-timer></app-timer>
+  <router-outlet></router-outlet>
 </div>
 
