--- a/resources/assets/angular/src/app/features/timer/clock/clock.component.html
+++ b/resources/assets/angular/src/app/features/timer/clock/clock.component.html
@@ -1,3 +1,7 @@
-<p>
-  clock works!
-</p>
+<div class="m-clock">
+  <span *ngIf="showHours" class="a-clock_hoursValue">{{hours | number:'2.0-0'}}</span>
+  <span *ngIf="showHours" class="a-clock_hoursDivider">:</span>
+  <span class="a-clock_minutesValue">{{minutes | number:'2.0-0'}}</span>
+  <span class="a-clock_minutesDivider">:</span>
+  <span class="a-clock_secondsValue">{{seconds | number:'2.0-0'}}</span>
+</div>
