--- a/resources/assets/angular/src/app/features/timer/timer-admin/timer-admin.component.html
+++ b/resources/assets/angular/src/app/features/timer/timer-admin/timer-admin.component.html
@@ -1,9 +1,17 @@
 <div *ngIf="!timer">Loading...</div>
 <div *ngIf="timer">
-  <app-clock [time]="timer.remaining"></app-clock>
-  {{ timer.status }}
-  <button type="button" (click)="pause()">Pause</button>
-  <button type="button" (click)="resume()">Resume</button>
-  <button type="button" (click)="start()">Start</button>
-  <button type="button" (click)="reset()">Reset</button>
+  <app-timerdisplay [timer]="timer"></app-timerdisplay>
+  <div>{{ timer.status }}</div>
+  <div>
+    <button *ngIf="showPause()" type="button" (click)="pause()">Pause</button>
+    <button *ngIf="showStop()" type="button" (click)="stop()">Stop</button>
+    <button *ngIf="showResume()" type="button" (click)="resume()">Resume</button>
+    <button *ngIf="showStart()" type="button" (click)="start()">Start</button>
+    <button *ngIf="!isInitial()" type="button" (click)="start()">Restart</button>
+    <button *ngIf="!isInitial()" type="button" (click)="reset()">Reset</button>
+  </div>
+  <div>
+    <input type="number" size="4" min="1" step="1" name="duration" [(ngModel)]="duration"> Seconds
+    <button type="button" (click)="setDuration()">Set Time</button>
+  </div>
 </div>
