Centre aligned and implemented noHours view on clock component

--- a/resources/assets/angular/src/app/features/timer/clock/clock.component.scss
+++ b/resources/assets/angular/src/app/features/timer/clock/clock.component.scss
@@ -11,6 +11,7 @@
 
   font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
   font-size: 15vw;
+  text-align: center;
 
   &.-noHours {
     font-size: 20vw;
