--- a/resources/assets/angular/src/app/app.component.html
+++ b/resources/assets/angular/src/app/app.component.html
@@ -1,10 +1,3 @@
-<nav>
-  <a routerLink="/timers" routerLinkActive="active">Timers</a>
-  <a routerLink="/timer/5857C8C6-4A5B-4BEC-8216-5C2349A9D55C" routerLinkActive="active">Timer</a>
-  <a routerLink="/timer/5857C8C6-4A5B-4BEC-8216-5C2349A9D55C/admin" routerLinkActive="active">Timer Admin</a>
-</nav>
-<div>
-
+<div #fullPage class="container-fluid">
   <router-outlet></router-outlet>
 </div>
-
