Initial work on implementation of trigger actions

--- a/resources/assets/angular/src/app/features/pages/timer-show/timer-show-page.component.html
+++ b/resources/assets/angular/src/app/features/pages/timer-show/timer-show-page.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="timer">
-  <app-timer-display [timer]="timer"></app-timer-display>
+  <app-timer-display [timer]="timer" [triggers]="triggers"></app-timer-display>
   <a routerLink="/timer/{{ timer.id }}/admin">
     <app-square-icon-button appHideOnInactive [icon]="'cog'"></app-square-icon-button>
   </a>
