--- a/resources/assets/angular/src/styles.scss
+++ b/resources/assets/angular/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'assets/scss/main';
+@import '../node_modules/bootstrap/scss/bootstrap-reboot';
 
 html, body {
   height: 100%;
