--- a/resources/assets/angular/src/app/features/timer/timer-display/timer-display.component.html
+++ b/resources/assets/angular/src/app/features/timer/timer-display/timer-display.component.html
@@ -1,1 +1,5 @@
-<app-clock [time]="getRemaining()" [paused]="getPaused()" [showHours]="getShowHours()"></app-clock>
+<div class="clock-wrapper" #clockWrapper>
+  <div class="clock">
+    <app-clock [time]="getRemaining()" [paused]="getPaused()" [showHours]="getShowHours()"></app-clock>
+  </div>
+</div>
