First commit of functioning Trigger actions

--- a/resources/assets/angular/src/app/features/pages/timer-admin/timer-admin-page.component.html
+++ b/resources/assets/angular/src/app/features/pages/timer-admin/timer-admin-page.component.html
@@ -1,2 +1,2 @@
 <app-navigation></app-navigation>
-<app-timer-admin *ngIf="timer" [timer]="timer"></app-timer-admin>
+<app-timer-admin *ngIf="timer" [timer]="timer | async"></app-timer-admin>
