Front-end styling and admin updates

--- a/angular/src/app/features/pages/timer-admin/timer-admin-page.component.html
+++ b/angular/src/app/features/pages/timer-admin/timer-admin-page.component.html
@@ -1,2 +1,4 @@
-<app-navigation></app-navigation>
-<app-timer-admin *ngIf="timer" [timer]="timer" [triggers]="triggers"></app-timer-admin>
+<div class="container-fluid">
+  <app-navigation></app-navigation>
+  <app-timer-admin *ngIf="timer" [timer]="timer" [triggers]="triggers" [templates]="templates"></app-timer-admin>
+</div>
