Remove erroneous params

--- a/angular/src/app/features/timer/trigger-form/trigger-form.component.html
+++ b/angular/src/app/features/timer/trigger-form/trigger-form.component.html
@@ -36,7 +36,7 @@
     </div>
   </div>
   <div class="col-md-auto">
-    <button class="btn btn-sm btn-success" type="button" (click)="saveTrigger(trigger)">Save</button>
-    <button *ngIf="trigger.id" class="btn btn-sm btn-outline-danger" type="button" (click)="deleteTrigger(trigger)">Delete</button>
+    <button class="btn btn-sm btn-success" type="button" (click)="saveTrigger()">Save</button>
+    <button *ngIf="trigger.id" class="btn btn-sm btn-outline-danger" type="button" (click)="deleteTrigger()">Delete</button>
   </div>
 </div>
