Restyle navigation bar

--- a/angular/src/app/features/pages/navigation/navigation.component.html
+++ b/angular/src/app/features/pages/navigation/navigation.component.html
@@ -1,5 +1,8 @@
-<nav>
-  <a routerLink="/timers" routerLinkActive="active">Timers</a>
-  <a routerLink="/timer/0382DBEC-7F99-4422-AF79-7A0587B510B0" routerLinkActive="active">Timer</a>
-  <a routerLink="/timer/0382DBEC-7F99-4422-AF79-7A0587B510B0/admin" routerLinkActive="active">Timer Admin</a>
+<nav class="navbar navbar-expand-md navbar-light bg-light mb-4">
+  <a class="navbar-brand" href="#">LiveTimer</a>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item">
+      <a routerLink="/timers">All Timers</a>
+    </li>
+  </ul>
 </nav>
