Add container to list

--- a/angular/src/app/features/pages/timer-list/timer-list-page.component.html
+++ b/angular/src/app/features/pages/timer-list/timer-list-page.component.html
@@ -1,2 +1,4 @@
 <app-navigation></app-navigation>
-<app-timer-list></app-timer-list>
+<div class="container-fluid">
+  <app-timer-list></app-timer-list>
+</div>
